[package]
name = "rasn"
version.workspace = true
categories = ["encoding", "no-std", "parser-implementations"]
description = "A safe no_std ASN.1 codec framework."
license.workspace = true
exclude = ["fuzzing"]
keywords = ["asn1", "der", "ber", "cer", "per"]
repository.workspace = true
edition.workspace = true

[lib]
bench = false

[workspace]
members = [".", "macros", "standards/*"]
exclude = ["fuzzing"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.20.0"
repository = "https://github.com/librasn/rasn.git"

[workspace.dependencies]
pretty_assertions = "1.4"
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }

[features]
default = ["macros"]
macros = ["rasn-derive"]
std = []
backtraces = ["std", "snafu/backtrace"]
compiler = ["rasn-compiler"]

[profile.bench-lto]
inherits = "bench"
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.bench-debug]
inherits = "dev"
opt-level = 1

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false
test = true

[[bench]]
name = "iai"
path = "benches/iai.rs"
harness = false

[[bench]]
name = "criterion_integer"
path = "benches/integer.rs"
harness = false
test = true

[dependencies]
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
snafu = { version = "0.8.5", default-features = false, features = ["rust_1_81"] }
bytes = { version = "1.7.1", default-features = false }
bitvec.workspace = true
rasn-derive = { version = "0.20", path = "macros", optional = true }
chrono.workspace = true
konst = { version = "0.3.9", default-features = false }
nom-bitvec = { package = "bitvec-nom2", version = "0.2.1" }
arrayvec = { version = "0.7.6", default-features = false }
either = { version = "1.13.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = [
    "race",
    "alloc",
] }
num-integer = { version = "0.1.46", default-features = false, features = [
    "i128",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

hashbrown = { version = "0.14.5", default-features = false, features = [
    "ahash",
    "inline-more",
] }
rasn-compiler = { version = "0.5.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
iai = "0.1.1"
once_cell = "1.19.0"
pretty_assertions.workspace = true
rasn-pkix = { path = "standards/pkix" }
x509-parser = "0.16"
