[package]
name = "rasn"
version.workspace = true
categories = ["encoding", "no-std", "parser-implementations"]
description = "A safe no_std ASN.1 codec framework."
license.workspace = true
exclude = ["fuzzing"]
keywords = ["asn1", "der", "ber", "cer", "per"]
repository.workspace = true
edition.workspace = true

[lib]
bench = false

[workspace]
members = [".", "macros", "macros/macros_impl", "standards/*"]
exclude = ["fuzzing"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.24.0"
repository = "https://github.com/librasn/rasn.git"

[workspace.dependencies]
pretty_assertions = "1.4"
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }

[features]
default = ["f32", "f64"]
std = []
f32 = []
f64 = []
backtraces = ["std", "snafu/backtrace"]
compiler = ["rasn-compiler"]

[profile.bench-lto]
inherits = "bench"
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.bench-debug]
inherits = "dev"
opt-level = 1

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false
test = true

[[bench]]
name = "iai"
path = "benches/iai.rs"
harness = false
bench = false

[[bench]]
name = "criterion_integer"
path = "benches/integer.rs"
harness = false
test = true

[[bench]]
name = "criterion_strings"
path = "benches/strings.rs"
harness = false
test = true

[[bench]]
name = "derive"
path = "benches/derive.rs"
harness = false

[dependencies]
bitvec.workspace = true
bytes = { version = "1.7.2", default-features = false }
chrono.workspace = true
either = { version = "1.13.0", default-features = false }
hashbrown = "0.14.5"
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
nom-bitvec = { package = "bitvec-nom2", version = "0.2.1" }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
num-integer = { version = "0.1.46", default-features = false, features = [
    "i128",
] }
once_cell = { version = "1.20.2", default-features = false, features = [
    "race",
    "alloc",
] }
rasn-compiler = { version = "0.5.3", optional = true }
rasn-derive = { version = "0.24", path = "macros" }
snafu = { version = "0.8.5", default-features = false, features = [
    "rust_1_81",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
xml-no-std = "0.8.19"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
    "plotters",
    "cargo_bench_support",
] }
iai-callgrind = "0.14.0"
once_cell = "1.20.2"
pretty_assertions.workspace = true
rasn-pkix = { path = "standards/pkix" }

# Assume that we need these dependencies only when benching manually on specific targets
[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
rustls-webpki = "0.102.8"
x509-cert = "0.2.5"
x509-certificate = "0.23.1"
x509-parser = "0.16"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rasn-derive-impl = { path = "macros/macros_impl"}
syn = {  version = "2.0.87", features = ["full"] }
