[package]
name = "fuzz"
version = "0.0.0"
authors = ["Erin Power <xampprocky@gmail.com>"]
edition = "2018"
description = "Something someday."
license = "MIT/Apache-2.0"
publish = false

[workspace]

[dependencies]
rasn = { path = ".." }
rasn-snmp = { path = "../standards/snmp" }
rasn-pkix = { path = "../standards/pkix" }
afl = "0.14.5"
clap = { version = "4.4.*", features = ["derive"] }
anyhow = "1.0.75"
