[package]
name = "fuzz"
version = "0.0.0"
authors = ["Erin Power <xampprocky@gmail.com>"]
edition = "2018"
description = "Something someday."
license = "MIT/Apache-2.0"
publish = false

[workspace]

[dependencies]
rasn = { path = ".." }
rasn-snmp = { path = "../standards/snmp" }
rasn-pkix = { path = "../standards/pkix" }
afl = "0.8.0"
