[package]
name = "fuzz"
version = "0.0.0"
authors = ["Erin Power <xampprocky@gmail.com>"]
edition = "2018"
description = "Something someday."
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[dependencies]
proc-macro2 = "1.0.92"
rasn = { path = ".." }
rasn-snmp = { path = "../standards/snmp" }
rasn-pkix = { path = "../standards/pkix" }
rasn-derive-impl = { path = "../macros/macros_impl" }
syn = { version = "2.0.87", features = ["parsing", "full", "clone-impls"] }
afl = "0.15.13"
