[package]
name = "rasn-derive"
version.workspace = true
categories = ["encoding", "no-std", "parser-implementations"]
edition.workspace = true
description = "Derive macros for rasn."
license.workspace = true
exclude = ["fuzzing"]
keywords = ["asn1", "der", "ber", "cer", "per"]
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.39", features = ["extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.19"
itertools = "0.10.1"
uuid = { version = "1.1.2", default-features = false, features = ["v4"] }
either = { version = "1.8.0", default-features = false }
rayon = "1.7.0"
