[package]
name = "rasn-derive"
version.workspace = true
categories = ["encoding", "no-std", "parser-implementations"]
edition.workspace = true
description = "Derive macros for rasn."
license.workspace = true
exclude = ["fuzzing"]
keywords = ["asn1", "der", "ber", "cer", "per"]
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.79", features = ["extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.86"
itertools = "0.13"
uuid = { version = "1.10.0", default-features = false, features = ["v4"] }
either = { version = "1.13.0", default-features = false }
rayon = "1.10.0"
