[package]
categories = ["data-structures", "encoding", "parser-implementations"]
description = "A pest grammar for the ASN.1 notation language."
edition = "2018"
keywords = ["pest", "asn1", "der", "ber", "protocol"]
license = "MIT/Apache-2.0"
name = "rasn-compiler-pest"
repository = "https://github.com/XAMPPRocky/rasn"
version = "0.1.1"
publish = false

[dependencies]
pest = "2"
pest_derive = "2"
