[package]
name = "rasn-cap"
version = "0.6.0"
edition = "2018"
description = "Data types for the Common Alerting Protocol (CAP 1.1)"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.6.0" }
