[package]
name = "rasn-cap"
version.workspace = true
edition.workspace = true
description = "Data types for the Common Alerting Protocol (CAP 1.1)"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.23" }
