[package]
name = "rasn-cms"
version.workspace = true
edition.workspace = true
description = "Data types for handling Cryptographic Message Syntax."
license.workspace = true
repository.workspace = true

[dependencies.rasn]
version = "0.21"
path = "../.."

[dependencies.rasn-pkix]
version = "0.21"
path = "../pkix"
