[package]
name = "rasn-credssp"
version.workspace = true
edition.workspace = true
description = "Data types for the Credential Security Support Provider Protocol"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.25" }
