[package]
name = "rasn-its"
description = "ASN.1 implementations for Intelligent Transport Systems (ITS) V2X communications"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = ["rasn/f32", "rasn/f64", "rasn/bytes"]

[dependencies]
bon = { version = "3.5", default-features = false }
lazy_static = { version = "1", features = ["spin_no_std"] }
rasn = { path = "../..", version = "0.28", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
anyhow = "1"
encoding_rs = "0.8.35"
rasn-compiler = "0.16.0"
