[package]
name = "rasn-kerberos"
version.workspace = true
edition.workspace = true
description = "Data types for Kerberos V5"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["otp"]

[features]
otp = ["rasn-pkix"]

[dependencies]
rasn = { path = "../..", version = "0.10.0" }
rasn-pkix = { path = "../pkix", version = "0.10.0", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
