[package]
name = "rasn-kerberos"
version.workspace = true
edition.workspace = true
description = "Data types for Kerberos V5"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["otp"]

[features]
default = ["rasn/f32", "rasn/f64", "rasn/bytes"]
otp = ["rasn-pkix"]

[dependencies]
rasn = { path = "../..", version = "0.28", default-features = false }
rasn-pkix = { path = "../pkix", version = "0.28", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
