[package]
name = "rasn-ldap"
version = "0.4.2"
edition = "2018"
description = "Data types for Lightweight Directory Access Protocol."
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.4.0" }
