[package]
name = "rasn-ldap"
version.workspace = true
edition.workspace = true
description = "Data types for Lightweight Directory Access Protocol."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.12.5" }
