[package]
name = "rasn-mib"
version.workspace = true
edition.workspace = true
description = "Data types for handling Management Information Base objects."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smi = { path = "../smi", package = "rasn-smi", version = "0.12.6" }
rasn = { path = "../..", version = "0.12.6" }
