[package]
name = "rasn-mib"
version.workspace = true
edition.workspace = true
description = "Data types for handling Management Information Base objects."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rasn/f32", "rasn/f64", "rasn/bytes"]

[dependencies]
smi = { path = "../smi", package = "rasn-smi", version = "0.26" }
rasn = { path = "../..", version = "0.26", default-features = false }
