[package]
name = "rasn-ocsp"
version.workspace = true
edition.workspace = true
description = "Data types for Online Certificate Status Protocol"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.9.5" }
rasn-pkix = { path = "../pkix", version = "0.9.5" }
