[package]
name = "rasn-ocsp"
version.workspace = true
edition.workspace = true
description = "Data types for Online Certificate Status Protocol"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rasn/f32", "rasn/f64", "rasn/bytes"]

[dependencies]
rasn = { path = "../..", version = "0.27", default-features = false }
rasn-pkix = { path = "../pkix", version = "0.27" }
