[package]
name = "rasn-pkix"
version.workspace = true
edition.workspace = true
description = "Data types for handling Public Key Infrastructure (PKIX) objects."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.10.6" }

[dev-dependencies]
base64 = "0.13"
bitvec.workspace = true
chrono.workspace = true
pem = "0.8.3"
pretty_assertions.workspace = true
