[package]
name = "rasn-pkix"
version.workspace = true
edition.workspace = true
description = "Data types for handling Public Key Infrastructure (PKIX) objects."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.22" }

[dev-dependencies]
base64 = "0.22"
bitvec.workspace = true
chrono.workspace = true
pem = "3.0.4"
pretty_assertions.workspace = true
