[package]
name = "rasn-smi"
version = "0.7.0"
authors = ["Erin Power <xampprocky@gmail.com>"]
edition = "2018"
description = "Data types for handling Structure for Management Information"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.7.0" }
chrono = "0.4.19"
