[package]
name = "rasn-smi"
version.workspace = true
edition.workspace = true
description = "Data types for handling Structure for Management Information"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.9.4" }
chrono.workspace = true
