[package]
name = "rasn-smime"
version.workspace = true
edition.workspace = true
description = "Data types for Secure/Multipurpose Internet Mail Extensions"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../..", version = "0.16" }
rasn-cms = { path = "../cms", version = "0.16" }
rasn-pkix = { path = "../pkix", version = "0.16" }
