[package]
name = "rasn-smime"
version.workspace = true
edition.workspace = true
description = "Data types for Secure/Multipurpose Internet Mail Extensions"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rasn/f32", "rasn/f64", "rasn/bytes"]

[dependencies]
rasn = { path = "../..", version = "0.27", default-features = false }
rasn-cms = { path = "../cms", version = "0.27" }
rasn-pkix = { path = "../pkix", version = "0.27" }
