[package]
name = "rasn-snmp"
version.workspace = true
edition.workspace = true
description = "Data types for handling the Simple Network Management Protocol"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smi = { path = "../smi", package = "rasn-smi", version = "0.12.1" }
rasn = { path = "../..", version = "0.12.1" }

[dev-dependencies]
hex = "0.4.3"
pretty_assertions.workspace = true
