[package]
name = "rasn-etsi-ts103097"
description = "ASN.1 modules for ETSI TS 103 097 - ITS Security (SEC), excluding extension module."
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true


[dependencies]
bon = { version = "3.1.1", default-features = false }
rasn = { version = "0.22", path = "../.." }
rasn-ieee1609dot2 = { version = "0.22", path = "../ieee1609dot2" }
rasn-etsi-ts103097-extensions = { version = "0.22", path = "../ts103097extensions" }

[dev-dependencies]
pretty_assertions = "1.4.1"
