[package]
name = "rasn-etsi-ts103097-extensions"
description = "ASN.1 definitions for ETSI TS 103 097 extension module"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
bon = { version = "3.1.1", default-features = false }

[dependencies.rasn]
version = "0.22"
path = "../.."

[dev-dependencies]
pretty_assertions = "1.4.1"
