[package]
name = "rasn-rfc7030"
version = "0.1.0"
edition = "2018"
description = "Data types for handling types in RFC7030."
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = { path = "../../../..", version = "0.3" }

[dev-dependencies]
base64 = "0.13"
